--- a/api/appData.json
+++ b/api/appData.json
@@ -34,6 +34,72 @@
       "brickId": "5",
       "quantity": 1,
       "id": 3
+    },
+    {
+      "userId": 1,
+      "brickId": "6",
+      "quantity": 1,
+      "id": 4
+    },
+    {
+      "userId": 1,
+      "brickId": "7",
+      "quantity": 1,
+      "id": 5
+    },
+    {
+      "userId": 1,
+      "brickId": "9",
+      "quantity": 1,
+      "id": 6
+    },
+    {
+      "userId": 1,
+      "brickId": "13",
+      "quantity": 1,
+      "id": 7
+    },
+    {
+      "userId": 1,
+      "brickId": "10",
+      "quantity": 1,
+      "id": 8
+    },
+    {
+      "userId": 1,
+      "brickId": "9",
+      "quantity": 1,
+      "id": 9
+    },
+    {
+      "userId": 1,
+      "brickId": "11",
+      "quantity": 1,
+      "id": 10
+    },
+    {
+      "userId": 1,
+      "brickId": "11",
+      "quantity": 1,
+      "id": 11
+    },
+    {
+      "userId": 1,
+      "brickId": "11",
+      "quantity": 1,
+      "id": 12
+    },
+    {
+      "userId": 1,
+      "brickId": "11",
+      "quantity": 1,
+      "id": 13
+    },
+    {
+      "userId": 2,
+      "brickId": 1,
+      "quantity": 1,
+      "id": 14
     }
   ],
   "notes": [
@@ -42,6 +108,12 @@
       "userId": 1,
       "brickId": 1,
       "note": "I love red blocks"
+    },
+    {
+      "id": 2,
+      "userId": 2,
+      "brickId": 1,
+      "note": "The metallic ones are better than red"
     }
   ]
 }
